--- a/aide.html
+++ b/aide.html
@@ -76,39 +76,41 @@
     <div id="aboutus">
         <div class="container">
             <div class="section_header">
-                <h3>1. Missions : Aide aux chercheurs</h3>
+                <h3>1. L'aide aux chercheurs</h3>
             </div>
             <div class="row">
                 <div class="col-sm-6 intro">
-                    <h6>L'aide à la recherche est l'une des 3 missions fondamentales de l'association.</h6>
+                    <h6>L'aide à la recherche est l'une des trois missions fondamentales de l'association.</h6>
                     <p>
-                    Le Musée de l'Homme est à la fois un Musée qui conserve et présente des collections au public et un établissement d'enseignement et de <b>recherche</b> sur l'évolution humaine. Afin de soutenir cette action, la Société des Amis a créé en 2008 le prix André LEROI-GOURHAN qui distingue et aide financièrement chaque année un étudiant du Muséeum national d'histoire naturelle dont le travail contribue au contenu scientifique et culturel du Musée de l'Homme.
+                    Le Musée de l'Homme est à la fois un Musée qui conserve et présente des collections au public et un établissement d'enseignement et de <b>recherche</b> sur l'évolution humaine. Afin de soutenir cette action, la Société des Amis a créé en 2008 le prix André LEROI-GOURHAN qui distingue et aide financièrement chaque année un étudiant du Muséeum national d'histoire naturelle dont le travail contribue au contenu scientifique et culturel du Musée de l'Homme.</p>
+                  <p>
 
-                    + Stabilo texte
-                    + Prix 2015 (4-5 lignes) (au milieu texte stabilo)
-                    Photo couv du livre "lart des objets de la préhistoire" ?
+                    <b>En 2014</b>, c'est Hermine Xhauflair (ci-contre) qui a été distinguée pour son travail sur "Le vegétal dans l'économie des chasseurs - cueilleurs préhistoriques de Palawan" aux Philippines.</p>
 
-                    Photo Musée Ethno , enlever
-                    Photo Remise du prix Ermine Xhauflair
+                    <b><p>En 2015</b>, le prix a été attribué à Jean-Pierre NGUEDE NGONO, pour son travail sur "L'adaptation et la résilience des cultures Aka et Baka face aux mutations socio-envirennementales".</p>
+<div class="well">  <p> <b> A propos d'André LEROI-GOURHAN </b> ( 1911- 1986 ) : Il a renouvelé nos connaissances et  notre manière de voir tant en paléontologie qu'en ethnologie ou en préhistoire que ce soit par son oeuvre ou par son enseignement , particulièrement sur le terrain . Il a marqué de son empreinte intellectuelle la seconde moitié du XXéme siécle et continue à influencer l'ensemble de la communauté des préhistoriens . André Leroi-Gourhan a commencé à travailler au Musée d'ethnographie du Trocadéro en 1933 . Nommé sous-directeur au Musée de l'Homme en 1946 , il a succédé à Marcel Griaule à la chaire d'ethnologie générale et de préhistoire de la Sorbonne en 1956 avant d'être élu au Collège de France en 1969 .</p></div>
+</br>
 
 
-                      </p>
                 </div>
                 <div class="col-sm-6">
                     <div class="flexslider">
                         <ul class="slides">
                             <li>
-                              <img src="img/origines2.png" width="220" height="650" />
+                              <img src="img/_J011615 copie.jpg" width="220" height="650" />
                             </li>
                             <li>
-                              <img src="img/musee-ethno2.png" width="220" height="650"  />
+                              <img src="img/origines.jpg" width="220" height="650"  />
                             </li>
                         </ul>
                     </div>
                 </div>
             </div>
+ <p>La socièté des amis soutient par ailleurs l'édition des <b>ouvrages</b> des chercheurs du Musée. C'est ce qu'elle vient de faire en aidant la publication du livre de <b>Patrick Pallet</b>, maitre de conférence au Musée de l'Homme, sur "L'art des objets de la préhistoire." (Edition Errence 2014)</p>
         </div>
+
     </div>
+
 
 
 
@@ -136,9 +138,9 @@ Présidée notamment par Charles de Noailles, Alix de Rothschild, Marie-Alice de
 
                     <h3 class="footer_header" style="padding-right: 0px">
                     <a class="navbar-brand" href="#">
-                    <img alt="Brand" src="img/SAMH_Logo.jpg" width="94" height="94" margin-right="2px">
-                    <a class="navbar-brand" href="#">
-                    <img alt="Brand" src="img/Logomnhn.jpg" width="94" height="94" margin-right="2px">
+                    <img alt="Brand" src="img/SAMH_Logo_bis.png" width="94" height="94" margin-right="2px">
+                    <a class="navbar-brand" href="http://www.mnhn.fr/fr">
+                    <img alt="Brand" src="img/logoMHHNlast.png" width="94" height="94" margin-right="2px">
                     </a>
                     </h3>
 
