--- a/avantages.html
+++ b/avantages.html
@@ -126,14 +126,14 @@
                     <div class="feature">
                         <div class="img_box">
                             <a href="#">
-                                <img src="img/service1.png" class="img-responsive">
+                                <img src="img/bateau.png" class="img-responsive">
                                 <span class="circle">
                                     <span class="plus">&#43;</span>
                                 </span>
                             </a>
                         </div>
                         <div class="text">
-                            <h6>Muséum National d'Histoire Naturelle </h6>
+                            <h6>Voyages </h6>
                             <p></p>
                         </div>
                     </div>
@@ -142,14 +142,14 @@
                     <div class="feature">
                         <div class="img_box">
                             <a href="#">
-                                <img src="img/service2.png" class="img-responsive">
+                                <img src="img/_J011596 copie.jpg" class="img-responsive">
                                 <span class="circle">
                                     <span class="plus">&#43;</span>
                                 </span>
                             </a>
                         </div>
                         <div class="text">
-                            <h6>Conférence </h6>
+                            <h6>Conférences </h6>
                             <p>
                                 </p>
                         </div>
@@ -159,14 +159,14 @@
                     <div class="feature last">
                         <div class="img_box">
                             <a href="#">
-                                <img src="img/service3.png" class="img-responsive">
+                                <img src="img/992226 Palmyre.jpg" class="img-responsive">
                                 <span class="circle">
                                     <span class="plus">&#43;</span>
                                 </span>
                             </a>
                         </div>
                         <div class="text">
-                            <h6>Italie 1 999 </h6>
+                            <h6>Visites </h6>
                             <p></p>
                         </div>
                     </div>
@@ -179,7 +179,7 @@
     <!-- Bulletin  -->
     <div class="start">
                 <p>Rejoignez-nous dés maintenant ! </p>
-                <a href="pricing.html">Bulletin d'inscription</a>
+                <a href="avantages.html">Bulletin d'inscription</a>
             </div>
         </div>
     </div>
@@ -209,7 +209,7 @@ Présidée notamment par Charles de Noailles, Alix de Rothschild, Marie-Alice de
                     <a class="navbar-brand" href="#">
                     <img alt="Brand" src="img/SAMH_Logo_bis.png" width="94" height="94" margin-right="2px">
                     <a class="navbar-brand" href="#">
-                    <img alt="Brand" src="img/Logomnhn.jpg" width="94" height="94" margin-right="2px">
+                    <img alt="Brand" src="img/logoMHHNlast.png" width="94" height="94" margin-right="2px">
                     </a>
                     </h3>
 
