--- a/collections.html
+++ b/collections.html
@@ -82,29 +82,31 @@
     <div id="aboutus">
         <div class="container">
             <div class="section_header">
-                <h3>2. Missions : Enrichissement des collections</h3>
+                <h3>2. L'enrichissement des collections</h3>
             </div>
             <div class="row">
                 <div class="col-sm-6 intro">
-                    <h6>L'enrichissement des collections est l'une des 3 missions fondamentales de l'association.</h6>
+                    <h6>L'enrichissement des collections est l'une des trois missions fondamentales de l'association.</h6>
                     <p>
-                    La Société des Amis contribue par ailleurs à <b> l'enrichissement des collections</b> du Musée, en l'aidant à acquérir des objets et en transmettant au musée les dons et legs qu'elle reçoit. Au cours des dernières années, la Société des Amis a notamment remis au Musée, les photographies présentées par Laura Sonnino-Jannelli en 2005 et l'importante donation de Claire et Amédée Maratier. Elle a acquis en 2011 une série de trente-huit objets du Vanuatu.
 
-                    changer chiifres -> Lettres
+                      On citera pour illuster ce propos les dons importants qu'elle a récemment transmis au Musée du fonds photographique de Laura Sonnino Jannelli, la belle collection d'objets ethnographiques Claire et Amédée Moratier ou encore la collection d'objets préhistoriques de David Charker. La Société des amis acquiert également des objets à la suggestion des Professeurs du Mudée, comme, en 2014 également, un yopero, série d'objets utilisés par l'éthnie d'Amazonie Piaroa pour l'inhalation du yapo. Elle vient par ailleurs, à l'occasion de son centenaire et de la réouverture des galeries du Musée, d'acheter un bel autel funéraire de la dynastie de Ming, objet qui va bientôt prendre place dans la galerie de l'Homme.</p>
 
-                    Remplacer texte par stabilo
+                    <p>
+                    Au cours des dernières années, la Société des Amis a également remis au Musée, les photographies présentées par Laura Sonnino-Jannelli en 2005 et l'importante donation de Claire et Amédée Maratier. Elle a acquis en 2011 une série de trente-huit objets du Vanuatu.</p>
+
+                    </br>
                     Photo : masque vanuatu verticale, hotel funéraire + yeux de laura
 
-                      </p>
+
                 </div>
                 <div class="col-sm-6">
                     <div class="flexslider">
                         <ul class="slides">
                             <li>
-                              <img src="img/laura2.jpg" />
+                              <img src="img/2013-5-37 2.jpg" width="220" height="550">
                             </li>
                             <li>
-                              <img src="img/laura2.jpg" />
+                              <img src="img/laura2.jpg" width="220" height="550" >
                             </li>
                         </ul>
                     </div>
@@ -141,7 +143,7 @@ Présidée notamment par Charles de Noailles, Alix de Rothschild, Marie-Alice de
                     <a class="navbar-brand" href="#">
                     <img alt="Brand" src="img/SAMH_Logo_bis.png" width="94" height="94" margin-right="2px">
                     <a class="navbar-brand" href="#">
-                    <img alt="Brand" src="img/Logomnhn.jpg" width="94" height="94" margin-right="2px">
+                    <img alt="Brand" src="img/logoMHHNlast.png" width="94" height="94" margin-right="2px">
                     </a>
                     </h3>
 
