--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
             </div>
             <div class="row contact">
                 <p>
-                    We’d love to hear from you. Interested in working together? Fill out the form below with some info about your project and I will get back to you as soon as I can. Please allow a couple days for me to respond.</p>
+                    Notre bureau est joignable au 01 47 04 62 10 du <b> lundi au vendredi </b>entre 10h et 18h.</p>
 
                 <form>
                     <div class="row form">
@@ -114,7 +114,7 @@
                             <li>75116 Paris,</li>
                             <li class="icon icontop">
                                 <span class="contacticos ico1"></span>
-                                <span class="text">1 817 274 2933</span>
+                                <span class="text">01 47 04 62 10</span>
                             </li>
                             <li class="icon">
                                 <span class="contacticos ico2"></span>
@@ -156,7 +156,7 @@ Présidée notamment par Charles de Noailles, Alix de Rothschild, Marie-Alice de
                     <a class="navbar-brand" href="#">
                     <img alt="Brand" src="img/SAMH_Logo_bis.png" width="94" height="94" margin-right="2px">
                     <a class="navbar-brand" href="#">
-                    <img alt="Brand" src="img/Logomnhn.jpg" width="94" height="94" margin-right="2px">
+                    <img alt="Brand" src="img/logoMHHNlast.png" width="94" height="94" margin-right="2px">
                     </a>
                     </h3>
 
