--- a/dons.html
+++ b/dons.html
@@ -78,13 +78,10 @@
             </div>
             <div class="row contact">
                 <p>
-                    Vous pouvez aider le Musée de l'Homme , soutenir le travail de ses
-chercheurs , contribuer à l'enrichissement de ses collections et au
-développement de ses activités en faisant un don ou un legs à la société des amis du Musée. L'association des amis du Musée de l'Homme est reconnue d'utilité publique. Les dons effectués par des particuliers bénéficient à ce titre des avantages fiscaux prévus
-par les lois du 1 Août 2003 et du 18 janvier 2005 , une déductibilité de 66% du don dans la limite de 20% du revenu .
-Les dons faits par des entreprises sont éligibles aux dispositions des
-lois sur le mécénat d'entreprise , soit une déduction de 60% dessommes
-versées dans la limite de 5 pour mille de leur chiffre d'affaires .</p>
+
+                  Vous pouvez aider le Musée de l'Homme , soutenir le travail de ses chercheurs , contribuer à l'enrichissement de ses collections et au développement de ses activités en faisant un don ou un legs à la société des amis du Musée.
+
+                </p>
 
      <div id="service_1">
         <div class="container">
@@ -101,6 +98,10 @@ versées dans la limite de 5 pour mille de leur chiffre d'affaires .</p>
                                 </span>
                             </a>
                         </div>
+                         <div class="text">
+                            <h6>Légende </h6>
+                            <p></p>
+                        </div>
 
                     </div>
                 </div>
@@ -113,6 +114,10 @@ versées dans la limite de 5 pour mille de leur chiffre d'affaires .</p>
                                     <span class="plus">&#43;</span>
                                 </span>
                             </a>
+                        </div>
+                          <div class="text">
+                            <h6>Légende </h6>
+                            <p></p>
                         </div>
 
                     </div>
@@ -127,6 +132,10 @@ versées dans la limite de 5 pour mille de leur chiffre d'affaires .</p>
                                 </span>
                             </a>
                         </div>
+                          <div class="text">
+                            <h6>Légende </h6>
+                            <p></p>
+                        </div>
 
                     </div>
                 </div>
@@ -140,19 +149,17 @@ versées dans la limite de 5 pour mille de leur chiffre d'affaires .</p>
                 <center><h2>Dons </h></center>
 </br>
 </br>
+
+<p> La société des amis du Musée de l'Homme est reconnue d'utilité publique. Elle est à ce titre habilitée à recevoir dons et legs . Et les dons en argent qui lui sont faits bénéficient pour cette même raison des avantages fiscaux de la loi du <b> 1 Août 2003 et de celle du 18 janvier 2005 </b>.</p>
+
 <div class="section_header">
                 <h3>Dons d'objets préhistoriques et ethnographiques</h3>
             </div>
 
             <p>
-                   La société des amis du Musée de l'Homme mène , depuis sa création , une
-politique active et régulière de dons en faveur du Musée de l'Homme afin
-de contribuer au travail des chercheurs et d'enrichir ses collections .
-C'est l'un de ses objectifs . Sous réserve de l'accord des services des
-collections ,
-elle accueille donc avec plaisir toutes les propositions qui peuvent lui
-êtes faites dans ce domaine. </p>
 
+              L'enrichissement des collections du musée de l'Homme est une des  principales missions de la société des amis . N'hésitez pas à nous  contacter au 01 47 04 62 10 si vous souhaitez lui donner , ou donner au Musée de l'Homme , des objets ou des documents que vous possédez et qui  susceptibles de l'intéresser . Nous sommes à votre disposition pour vous rencontrer et faire examiner les objets par des chercheurs du Musée .
+              </p>
 <div class="section_header">
                 <h3>Dons de sommes d'argent</h3>
             </div>
@@ -163,38 +170,96 @@ de ses activités , notamment les expositions et pour soutenir le travail
 de ses chercheurs , frais de mission ou édition d'ouvrages.
 Votre générosité est sollicitée dans ces différents buts.</p>
 
+
+
                 <center><h2>Legs </h></center>
+
+
 </br>
 </br>
 
 <p> Si vous souhaitez faire de la société des amis du Musée de l'Homme votre
-légataire universel ou particulier pour une partie de votre patrimoine, vos
-décisions doivent figurer dans un testament établi avec un notaire . La
-société des amis est à votre disposition pour répondre à vos questions ,
-appelez-nous au 01 47 04 62 10 .</p>
+légataire universel ou particulier , c'est à dire pour une partie de
+votre patrimoine , par exemple un ou plusieurs objets , ces dispositions
+doivent figurer dans un testament . Votre notaire vous aidera à rédiger
+ce texte. Nous sommes à votre disposition pour vous apporter notre concours et  pour répondre à
+vos questions. Contactez-nous au <b> 01 47 04 62 10 </b> </p>
+
+</br>
+</br>
 
 <center><h2>Régime fiscal des dons </h></center>
-</br>
-</br>
+
 
 <div class="section_header">
                 <h3>Dons des particuliers</h3>
-            </div>
+                 </div>
 
-<div class="section_header">
-                <h3>Réduction d'impot sur le revenu</h3>
-            </div>
+<p>Les dons en argent effectués à la société de amis du Musée de l'Homme par des particuliers sont déductibles de leurs revenus. Le taux de déduction est de 66% dans la limite de 20% du revenu imposable. Si les dons excèdent cette limite, l'excédent est reporté successivement sur les cinq années suivantes et ouvre droit à une réduction du revenu imposable dans les mêmes conditions ? </p>
 
-<div class="section_header">
-                <h3>ISF</h3>
-            </div>
 
-<div class="section_header">
-                <h3>Droits de succession ; dons faits par les héritiers</h3>
-            </div>
+<p> Les dons en argent effectués à la société des amis du Musée de l'Homme  par des entreprises assujetties à l'impôt sur le revenu ou à l'impôt sur  les sociétés bénéficient , dans les conditions de la loi , d'une réduction d'impôt égale à 60% de leur montant dans la limite de 5/000 de  leur chiffre d'affaires . Si la limite fixée par les textes est  dépassée , l'excédent de versement peut donner lieu à réduction d'impôt au titre des cinq exercices suivants </p>
 
-<div class="section_header">
-                <h3>Dons des entreprises</h3>
+     <div id="service_1">
+        <div class="container">
+            <div class="section_header">
+            </div>
+            <div class="row service_wrapper">
+                <div class="col-sm-4">
+                    <div class="feature">
+                        <div class="img_box">
+                            <a href="img/55-33-2A.JPG">
+                                <img src="img/55-33-2A.JPG" width="290" height="190">
+                                <span class="circle">
+                                    <span class="plus">&#43;</span>
+                                </span>
+                            </a>
+                        </div>
+                          <div class="text">
+                            <h6>Légende </h6>
+                            <p></p>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="feature">
+                        <div class="img_box">
+                            <a href="img/33-139-11.JPG">
+                                <img src="img/33-139-11.JPG" width="290" height="190">
+                                <span class="circle">
+                                    <span class="plus">&#43;</span>
+                                </span>
+                            </a>
+                        </div>
+                          <div class="text">
+                            <h6>Légende </h6>
+                            <p></p>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="feature last">
+                        <div class="img_box">
+                            <a href="img/17010_01.JPG">
+                                <img src="img/17010_01.JPG" width="290" height="190">
+                                <span class="circle">
+                                    <span class="plus">&#43;</span>
+                                </span>
+                            </a>
+                        </div>
+                          <div class="text">
+                            <h6>Légende </h6>
+                            <p></p>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
             </div>
 
                     </div>
@@ -230,7 +295,7 @@ Présidée notamment par Charles de Noailles, Alix de Rothschild, Marie-Alice de
                     <a class="navbar-brand" href="#">
                     <img alt="Brand" src="img/SAMH_Logo_bis.png" width="94" height="94" margin-right="2px">
                     <a class="navbar-brand" href="#">
-                    <img alt="Brand" src="img/Logomnhn.jpg" width="94" height="94" margin-right="2px">
+                    <img alt="Brand" src="img/logoMHHNlast.png" width="94" height="94" margin-right="2px">
                     </a>
                     </h3>
 
