--- a/histoire.html
+++ b/histoire.html
@@ -116,7 +116,7 @@
                     <div class="feature">
                         <div class="img_box">
                             <a href="img/laura2.jpg">
-                                <img src="img/laura2.jpg" width="290" height="390">
+                                <img src="img/primitifs.jpg" width="290" height="390">
                                 <span class="circle">
                                     <span class="plus">&#43;</span>
                                 </span>
@@ -129,7 +129,8 @@
                     <div class="feature last">
                         <div class="img_box">
                             <a href="img/allez2.jpg">
-                                <img src="img/musee-ethno2.png" width="290" height="390" topmargin="10px">
+                                <img src="img/musee-ethno2.png" width="290" height="390" topmargin="10px"
+
                                 <span class="circle">
                                     <span class="plus">&#43;</span>
                                 </span>
@@ -204,7 +205,7 @@ Présidée notamment par Charles de Noailles, Alix de Rothschild, Marie-Alice de
                     <a class="navbar-brand" href="#">
                     <img alt="Brand" src="img/SAMH_Logo_bis.png" width="94" height="94" margin-right="2px">
                     <a class="navbar-brand" href="#">
-                    <img alt="Brand" src="img/Logomnhn.jpg" width="94" height="94" margin-right="2px">
+                    <img alt="Brand" src="img/logoMHHNlast.png" width="94" height="94" margin-right="2px">
                     </a>
                     </h3>
 
