--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
             <div class="start">
                 <p>Rejoignez-nous dés maintenant ! </p>
-                <a href="pricing.html">Adhérez </a>
+                <a href="avantages.html">Adhérez </a>
             </div>
         </div>
     </div>
@@ -179,7 +179,7 @@ Présidée notamment par Charles de Noailles, Alix de Rothschild, Marie-Alice de
                     <a class="navbar-brand" href="#">
                     <img alt="Brand" src="img/SAMH_Logo_bis.png" width="94" height="94" margin-right="2px">
                     <a class="navbar-brand" href="#">
-                    <img alt="Brand" src="img/Logomnhn.png" width="94" height="94" margin-right="2px">
+                    <img alt="Brand" src="img/logoMHHNlast.png" width="94" height="94" margin-right="2px">
                     </a>
                     </h3>
 
