--- a/marseille.html
+++ b/marseille.html
@@ -81,12 +81,16 @@
                 <div class="col-sm-4">
                     <div class="feature">
                         <div class="img_box">
-                            <a href="img/italie.png">
-                                <img src="img/italie.png" width="290" height="190">
+                            <a href="img/083004 Zvartnots.jpg">
+                                <img src="img/083004 Zvartnots.jpg" width="290" height="190">
                                 <span class="circle">
                                     <span class="plus">&#43;</span>
                                 </span>
                             </a>
+                        </div>
+                        <div class="text">
+                            <h6></h6>
+                            <p><b>Italie 1 999</b></p> <p>Crédits Photo : Jaques Prévost</p>
                         </div>
 
                     </div>
@@ -94,12 +98,15 @@
                 <div class="col-sm-4">
                     <div class="feature">
                         <div class="img_box">
-                            <a href="img/bouddah.png">
-                                <img src="img/bouddah.png" width="290" height="190">
+                            <a href="img/marseille_972155 Onega Kiji.jpg">
+                                <img src="img/marseille_972155 Onega Kiji.jpg" width="290" height="190">
                                 <span class="circle">
                                     <span class="plus">&#43;</span>
                                 </span>
                             </a>
+                        </div>
+                        <div class="text">
+                    <p><b>Italie 1 999</b></p> <p>Crédits Photo : Jaques Prévost</p>
                         </div>
 
                     </div>
@@ -107,12 +114,16 @@
                 <div class="col-sm-4">
                     <div class="feature last">
                         <div class="img_box">
-                            <a href="img/afrique.png">
-                                <img src="img/afrique.png" width="290" height="190">
+                            <a href="img/992226 Palmyre.jpg">
+                                <img src="img/992226 Palmyre.jpg" width="290" height="190">
                                 <span class="circle">
                                     <span class="plus">&#43;</span>
                                 </span>
                             </a>
+                        </div>
+                        <div class="text">
+                            <h6></h6>
+                    <p><b>Italie 1 999</b></p> <p>Crédits Photo : Jaques Prévost</p>
                         </div>
 
                     </div>
@@ -187,7 +198,7 @@ Présidée notamment par Charles de Noailles, Alix de Rothschild, Marie-Alice de
                     <a class="navbar-brand" href="#">
                     <img alt="Brand" src="img/SAMH_Logo_bis.png" width="94" height="94" margin-right="2px">
                     <a class="navbar-brand" href="#">
-                    <img alt="Brand" src="img/Logomnhn.jpg" width="94" height="94" margin-right="2px">
+                    <img alt="Brand" src="img/logoMHHNlast.png" width="94" height="94" margin-right="2px">
                     </a>
                     </h3>
 
