--- a/paris.html
+++ b/paris.html
@@ -82,12 +82,16 @@
                 <div class="col-sm-4">
                     <div class="feature">
                         <div class="img_box">
-                            <a href="img/desert.png">
-                                <img src="img/desert.png" width="290" height="190">
+                            <a href="img/992017 Beyrouth.jpg">
+                                <img src="img/992017 Beyrouth.jpg" width="290" height="190">
                                 <span class="circle">
                                     <span class="plus">&#43;</span>
                                 </span>
                             </a>
+                        </div>
+                        <div class="text">
+                            <h6></h6>
+                            <p><b>Italie 1 999</b></p> <p>Crédits Photo : Jaques Prévost</p>
                         </div>
 
                     </div>
@@ -95,12 +99,16 @@
                 <div class="col-sm-4">
                     <div class="feature">
                         <div class="img_box">
-                            <a href="img/sable.png">
-                                <img src="img/sable.png" width="290" height="190">
+                            <a href="img/021096 Turkana.jpg">
+                                <img src="img/021096 Turkana.jpg" width="290" height="190">
                                 <span class="circle">
                                     <span class="plus">&#43;</span>
                                 </span>
                             </a>
+                        </div>
+                        <div class="text">
+                            <h6></h6>
+                            <p><b>Nepal 2011</b></p> <p>Crédits Photo : Jaques Prévost</p>
                         </div>
 
                     </div>
@@ -108,12 +116,16 @@
                 <div class="col-sm-4">
                     <div class="feature last">
                         <div class="img_box">
-                            <a href="img/bateau.png">
-                                <img src="img/bateau.png" width="290" height="190">
+                            <a href="img/992255 Bosra.jpg">
+                                <img src="img/992255 Bosra.jpg" width="290" height="190">
                                 <span class="circle">
                                     <span class="plus">&#43;</span>
                                 </span>
                             </a>
+                        </div>
+                        <div class="text">
+                            <h6></h6>
+                            <p><b>Cuba 2004</b></p> <p>Crédits Photo : Jaques Prévost</p>
                         </div>
 
                     </div>
@@ -202,7 +214,7 @@ Présidée notamment par Charles de Noailles, Alix de Rothschild, Marie-Alice de
                     <a class="navbar-brand" href="#">
                     <img alt="Brand" src="img/SAMH_Logo_bis.png" width="94" height="94" margin-right="2px">
                     <a class="navbar-brand" href="#">
-                    <img alt="Brand" src="img/Logomnhn.jpg" width="94" height="94" margin-right="2px">
+                    <img alt="Brand" src="img/logoMHHNlast.png" width="94" height="94" margin-right="2px">
                     </a>
                     </h3>
 
