--- a/soutien.html
+++ b/soutien.html
@@ -75,17 +75,17 @@
     <div id="aboutus">
         <div class="container">
             <div class="section_header">
-                <h3>3. Missions : Soutien aux activités</h3>
+                <h3>3. Soutien aux activités</h3>
             </div>
             <div class="row">
                 <div class="col-sm-6 intro">
-                    <h6>Le soutien aux activités est l'une des 3 missions fondamentales de l'association.</h6>
+                    <h6>Le soutien aux activités est l'une des trois missions fondamentales de l'association.</h6>
 
-                    <p> La Société des Amis apporte  son <b> aide aux activités</b> du Musée de l'Homme. Avant la fermeture des galeries au public pour travaux de rénovation, elle a soutenu toutes les expositions organisées par le musée, notamment celles consacrées à Jean Rouch, à Germaine Tillion et au site d'Atapuerca.
+                    <p> La Société des Amis apporte  son <b> aide aux activités</b> du Musée de l'Homme. Avant la fermeture des galeries au public pour travaux de rénovation, elle a soutenu toutes les expositions organisées par le musée, notamment celles consacrées à Jean Rouch, à Germaine Tillion et au site d'Atapuerca.</p>
 
-                      Elle s'associe chaque année au Musée pour l'organisation de conférences, lesquelles ont lieu au Muséum d'Histoire Naturelle ou à l'Institut de paléontologie humaine. Elle organise par ailleurs des rendez-vous mensuels avec les chercheurs du Musée, toujours en partenariat avec ce dernier.
+                       <p>Elle s'associe chaque année au Musée pour l'organisation de conférences, lesquelles ont lieu au Muséum d'Histoire Naturelle ou à l'Institut de paléontologie humaine. Elle organise par ailleurs des rendez-vous mensuels avec les chercheurs du Musée, toujours en partenariat avec ce dernier. </p>
 
-                      + stabilo </p>
+                       <p>Elle aide régulièrement le festival international du cinéma ethnographique Jean Rouch. </p>
 
                       Photos : arts primitifs, affiche corrigan, photo phréistoire origines de l'homme (orange)
 
@@ -95,10 +95,10 @@
                     <div class="flexslider">
                         <ul class="slides">
                             <li>
-                              <img src="img/primitifs.jpg" />
+                              <img src="img/PRIMITIFS.jpg" width="220" height="550" >
                             </li>
                             <li>
-                              <img src="img/primitifs.jpg" />
+                              <img src="img/origines.jpg" width="220" height="550">
                             </li>
                         </ul>
                     </div>
@@ -135,7 +135,7 @@ Présidée notamment par Charles de Noailles, Alix de Rothschild, Marie-Alice de
                     <a class="navbar-brand" href="#">
                     <img alt="Brand" src="img/SAMH_Logo_bis.png" width="94" height="94" margin-right="2px">
                     <a class="navbar-brand" href="#">
-                    <img alt="Brand" src="img/Logomnhn.jpg" width="94" height="94" margin-right="2px">
+                    <img alt="Brand" src="img/logoMHHNlast.png" width="94" height="94" margin-right="2px">
                     </a>
                     </h3>
 
