--- a/nantes.html
+++ b/nantes.html
@@ -81,12 +81,16 @@
                 <div class="col-sm-4">
                     <div class="feature">
                         <div class="img_box">
-                            <a href="img/desert.png">
-                                <img src="img/desert.png" width="290" height="190">
+                            <a href="img/marseille_112271 Apollonia.JPG">
+                                <img src="img/marseille_112271 Apollonia.JPG" width="290" height="190">
                                 <span class="circle">
                                     <span class="plus">&#43;</span>
                                 </span>
                             </a>
+                        </div>
+                        <div class="text">
+                            <h6></h6>
+                            <p><b>Italie 1 999</b></p> <p>Crédits Photo : Jaques Prévost</p>
                         </div>
 
                     </div>
@@ -94,12 +98,16 @@
                 <div class="col-sm-4">
                     <div class="feature">
                         <div class="img_box">
-                            <a href="img/sable.png">
-                                <img src="img/sable.png" width="290" height="190">
+                            <a href="img/032120 Vulcano.jpg">
+                                <img src="img/032120 Vulcano.jpg" width="290" height="190">
                                 <span class="circle">
                                     <span class="plus">&#43;</span>
                                 </span>
                             </a>
+                        </div>
+                        <div class="text">
+                            <h6></h6>
+                            <p><b>Italie 1 999</b></p> <p>Crédits Photo : Jaques Prévost</p>
                         </div>
 
                     </div>
@@ -107,12 +115,16 @@
                 <div class="col-sm-4">
                     <div class="feature last">
                         <div class="img_box">
-                            <a href="img/bateau.png">
-                                <img src="img/bateau.png" width="290" height="190">
+                            <a href="img/981033 Saquisili.jpg">
+                                <img src="img/981033 Saquisili.jpg" width="290" height="190">
                                 <span class="circle">
                                     <span class="plus">&#43;</span>
                                 </span>
                             </a>
+                        </div>
+                        <div class="text">
+                            <h6></h6>
+                            <p><b>Italie 1 999</b></p> <p>Crédits Photo : Jaques Prévost</p>
                         </div>
 
                     </div>
@@ -190,7 +202,7 @@ Présidée notamment par Charles de Noailles, Alix de Rothschild, Marie-Alice de
                     <a class="navbar-brand" href="#">
                     <img alt="Brand" src="img/SAMH_Logo_bis.png" width="94" height="94" margin-right="2px">
                     <a class="navbar-brand" href="#">
-                    <img alt="Brand" src="img/Logomnhn.jpg" width="94" height="94" margin-right="2px">
+                    <img alt="Brand" src="img/logoMHHNlast.png" width="94" height="94" margin-right="2px">
                     </a>
                     </h3>
 
