--- a/aide.html
+++ b/aide.html
@@ -97,7 +97,7 @@
                     <div class="flexslider">
                         <ul class="slides">
                             <li>
-                              <img src="img/prix2014LG.jpeg" width="220" height="650" />
+                              <img src="img/soutien_prix2014LG.jpeg" width="220" height="650" />
                             </li>
                             <li>
                               <img src="img/origines.jpg" width="220" height="650"  />
