--- a/soutien.html
+++ b/soutien.html
@@ -95,7 +95,7 @@
                     <div class="flexslider">
                         <ul class="slides">
                             <li>
-                              <img src="img/PRIMITIFS.jpg" width="220" height="550" >
+                              <img src="img/primitifs.jpg" width="220" height="550" >
                             </li>
                             <li>
                               <img src="img/origines.jpg" width="220" height="550">
