--- a/avantages.html
+++ b/avantages.html
@@ -142,7 +142,7 @@
                     <div class="feature">
                         <div class="img_box">
                             <a href="#">
-                                <img src="img/_J011596 copie.jpg" class="img-responsive">
+                                <img src="img/prix2014LG.jpeg" class="img-responsive">
                                 <span class="circle">
                                     <span class="plus">&#43;</span>
                                 </span>
