--- a/aide.html
+++ b/aide.html
@@ -102,6 +102,9 @@
                             <li>
                               <img src="img/origines.jpg" width="220" height="650"  />
                             </li>
+                            <li>
+                              <img src="img/20150911_122508.jpg" width="220" height="650" />
+                            </li>
                         </ul>
                     </div>
                 </div>
