--- a/histoire.html
+++ b/histoire.html
@@ -103,11 +103,16 @@
                     <div class="feature">
                         <div class="img_box">
                             <a href="img/musee-ethno2.png ">
-                                <img src="img/allez2.jpg" width="290" height="390">
+                                <img src="img/musee-ethno2.png" width="290" height="390">
                                 <span class="circle">
                                     <span class="plus">&#43;</span>
                                 </span>
                             </a>
+                        </div>
+                        <div class="text">
+
+                            <p>Légende
+                                </p>
                         </div>
 
                     </div>
@@ -122,6 +127,11 @@
                                 </span>
                             </a>
                         </div>
+                        <div class="text">
+
+                            <p>Légende
+                                </p>
+                        </div>
 
                     </div>
                 </div>
@@ -129,12 +139,17 @@
                     <div class="feature last">
                         <div class="img_box">
                             <a href="img/allez2.jpg">
-                                <img src="img/musee-ethno2.png" width="290" height="390" topmargin="10px"
+                                <img src="img/allez2.jpg" width="290" height="390" topmargin="10px"
 
                                 <span class="circle">
                                     <span class="plus">&#43;</span>
                                 </span>
                             </a>
+                        </div>
+                        <div class="text">
+
+                            <p>Légende
+                                </p>
                         </div>
 
                     </div>
