--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="info">
             </div>
         </article>
-        <article class="slide" id="tour" style="background: url('img/samh_home3.jpg') repeat-x top center;">
+        <article class="slide" id="tour" style="background: url('img/backgrounds/samh_home3.jpg') repeat-x top center;">
             <div class="info">
                 <h2>Réouverture du Musée prévue le </h2>
                 <a href="features.html">17 Octobre 2015 </a>
