--- a/bulletin.html
+++ b/bulletin.html
@@ -60,9 +60,8 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Adhésions <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="tarifs.html">Tarifs</a></li>
-                            <li><a href="avantages.html">Avantages</a></li>
-                            <li><a href="bulletin.html">Bulletin</a></li>
+                             <li><a href="tarifs.html">Adhérer</a></li>
+                            <li><a href="avantages.html">FAQ</a></li>
                         </ul>
                     </li>
                     <li><a href="dons.html">Dons</a></li>
